# libmoonsound

./: .gitignore  CMakeLists.txt  DEBUG.md  PLAN.md  README.md
scripts/: compare_trace_normalized.sh
src/: libmoonsound.h  mwm2wav.c  mwm_parser.c  mwm_parser.h  mwm_ref_trace.c  wav_writer.h
